--- a/recipes/src/assets/global.css
+++ b/recipes/src/assets/global.css
@@ -1,6 +1,6 @@
 body {
     background: #F5F5F5;        
-    height: 1200px; 
+    height: auto; 
     margin: 0;   
 }
 #header {
@@ -17,7 +17,7 @@ body {
     float: left;
     margin-left: 30px;  
     font-size: 40px; 
-    color: blue; 
+    color: lightblue; 
     margin-top: 15px;    
 }
 .header-container h1 {
@@ -27,12 +27,17 @@ body {
     color: lightgreen; 
     margin-top: 15px;
 }
+.header-recipes {
+    font-size: 40px;
+    color: lightgreen;
+    margin-left: 25px;
+}
 .search-user {    
     margin-right: 20px; 
     float: right;   
     margin-top: 25px;
     font-size: 30px;
-    color: blue;    
+    color: lightblue;    
 }
 .search-user i {
     margin-right: 35px;
@@ -43,46 +48,51 @@ body {
     position: relative; 
     margin-left: 30px;
 }
-.header-recipes {
-    font-size: 40px;
-    color: lightgreen;
-    margin-left: 25px;
-}
+/* END OF HEADER CONTAINER */
 .slider-container {    
     background: F5F5F5;
     position: relative;
+    margin-top: 80px;   
+    }
+.in-slider {
+        margin: auto;
+        padding-left: 10px;
     }
 .img-con {
-    width: 300px;
-    height: 300px;
+    width: 430px;
+    height: 350px;
     border-radius: 25px 25px 25px 25px;
 }
-.in-slider {
-    margin: 10px 10px 10px 10px;
+
+.star-icon {
+    margin-left: 10px; 
+    float: left;  
+    font-size: 25px;
+    color: lightblue;        
 }
-.in-header a {
-    color: lightgreen;
-    margin-left: 25px;
-    text-decoration: none;
+.food-icon {    
+    float: right;
+    margin-right: 45px;
+    font-size: 25px;
+    color: lightblue;
 }
 .slick-prev:before,
 .slick-next:before {
-        color: lightgreen;
+        color: lightgreen;        
     }
-
-/* Inrecipe CSS */
-#in-container {
-    width: 100%;
-    height: 1200px;
-    background: green;
+.slick-dots {
+    position: absolute;
+    
 }
-.recipe-container {
-    width: 350px;
-    height: 350px;
-    background: blue;
-    display: inline-block;
-    margin: 15px 0 0 25px;
-
+.slider-h1 {
+    color: lightgreen;
+}
+.slick-dots li button:before {
+    color: lightblue;
+    margin-top: 10px;
+  }
+.slick-dots li.slick-active button:before {
+    color: lightblue !important;
 }
 
 
