--- a/recipes/src/assets/global.css
+++ b/recipes/src/assets/global.css
@@ -52,40 +52,50 @@ body {
 .slider-container {    
     background: F5F5F5;
     position: relative;
-    margin-top: 80px;   
+    width: 100%;
+    height: 450px;  
     }
-.in-slider {
-        margin: auto;
-        padding-left: 10px;
+.in-slider {        
+    padding-left: 10px;
+    width: 90%;
+    height: 100%;
     }
-.img-con {
-    width: 430px;
-    height: 350px;
-    border-radius: 25px 25px 25px 25px;
+.img-in {
+    width: 100%;
+    height: 250px;
+    border-radius: 14% 14% 14% 14%;
 }
-
+.img-con {
+    width: 100%;
+    height: 50%;
+    background: white;
+} 
 .star-icon {
-    margin-left: 10px; 
+    margin-left: 5%; 
     float: left;  
-    font-size: 25px;
+    font-size: 100%;
     color: lightblue;        
 }
 .food-icon {    
     float: right;
-    margin-right: 45px;
-    font-size: 25px;
+    margin-right: 5%;
+    font-size: 100%;
     color: lightblue;
 }
 .slick-prev:before,
 .slick-next:before {
-        color: lightgreen;        
+        color: lightgreen; 
     }
 .slick-dots {
     position: absolute;
     
 }
-.slider-h1 {
-    color: lightgreen;
+.title {
+    position: relative;
+    color: teal;
+    text-align: center;
+    margin-top: 45px;
+    
 }
 .slick-dots li button:before {
     color: lightblue;
@@ -93,6 +103,15 @@ body {
   }
 .slick-dots li.slick-active button:before {
     color: lightblue !important;
+}
+.slick-track{
+    margin-top: 75px;
+   
+}
+.slider-footer {
+ position: absolute; 
+ bottom: 15px;
+ width: 96%;
 }
 
 
