--- a/recipes/src/assets/global.css
+++ b/recipes/src/assets/global.css
@@ -58,7 +58,7 @@ body {
     }
 .in-slider {        
     padding-left: 10px;
-    width: 90%;
+    width: 97.8%;
     height: 100%;
     }
 .img-in {
@@ -72,7 +72,7 @@ body {
     height: 50%;
     
 } 
-.star-icon {
+.clock-icon {
     margin-left: 5%; 
     float: left;  
     font-size: 100%;
@@ -100,11 +100,11 @@ body {
     
 }
 .slick-dots li button:before {
-    color: lightblue;
+    color: blue;
     margin-top: 10px;
   }
 .slick-dots li.slick-active button:before {
-    color: lightblue !important;
+    color: blue !important;
 }
 .slick-track{
     margin-top: 75px;
