--- a/recipes/src/assets/global.css
+++ b/recipes/src/assets/global.css
@@ -1,7 +1,10 @@
-body {
+html,body {
     background: #F5F5F5;        
-    height: auto; 
+    height: 100%; 
     margin: 0;   
+}
+#root{
+    height: 100%;
 }
 #header {
     width: 100%;
@@ -46,78 +49,9 @@ body {
     width: 96%;
     background:#F5F5F5;
     position: relative; 
-    margin-left: 30px;
-}
-/* END OF HEADER CONTAINER */
-.slider-container {    
-    background: white;
-    position: relative;
-    width: 100%;
-    height: 450px; 
-    border-radius: 20px 20px 20px 20px;
-    }
-.in-slider {        
-    padding-left: 10px;
-    width: 97.8%;
-    height: 100%;
-    }
-.img-in {
-    width: 100%;
-    height: 250px;
-    border-radius: 14% 14% 14% 14%;
-    margin: 25px 25px 25px 25px;
-}
-.img-con {
-    width: 90%;
-    height: 50%;
-    
+    margin-left: 1.8%;   
 } 
-.clock-icon {
-    margin-left: 5%; 
-    float: left;  
-    font-size: 100%;
-    color: lightblue;        
-}
-.food-icon {    
-    float: right;
-    margin-right: 5%;
-    font-size: 100%;
-    color: lightblue;
-}
-.slick-prev:before,
-.slick-next:before {
-        color: lightgreen; 
-    }
-.slick-dots {
-    position: absolute;
-    
-}
-.title {
-    position: relative;
-    color: teal;
-    text-align: center;
-    margin-top: 45px;
-    
-}
-.slick-dots li button:before {
-    color: blue;
-    margin-top: 10px;
-  }
-.slick-dots li.slick-active button:before {
-    color: blue !important;
-}
-.slick-track{
-    margin-top: 75px;
-   
-}
-.slider-footer {
- position: absolute; 
- bottom: 15px;
- width: 96%;
-}
-.slick-slide {
-    padding-left: 10px;
-}
+
 
 
 
