--- a/recipes/src/assets/SingleRecipe.css
+++ b/recipes/src/assets/SingleRecipe.css
@@ -8,9 +8,17 @@
 }
 .recipes-info {
     width: 60%;
+    
     background: rgb(163, 250, 163);
     height: auto;
-    border-radius: 25px 25px 0 25px;
+    border-radius: 25px 25px 25px 25px;
+    box-shadow: 5px 5px 5px 5px lightblue;
+}
+.recipes-info:hover {
+    background: rgb(113, 199, 228);
+    box-shadow: 5px 5px 5px 5px rgb(193, 243, 193);   
+    transition: 0.7s; 
+   
 }
 .recipes-img img{
     height: 18em;
@@ -39,18 +47,21 @@
 .something h1 {
     font-size: 20px;
     display: inline-flex;
-    padding-left: 10px;
+    padding-left: 10px;    
 }
 .something h1:hover {
     color: white;
     transform: skew(13deg); 
     transition: 0.5s;    
 }
+.recipes-title h1 {
+    box-shadow: 0 5px 0 0 white;
+
+}
 .recipes-title h1:hover {
     color: white;
     transform: rotate3d(1, 0, 1, 5deg);
-    transition: 0.6s;
-    
+    transition: 0.6s;    
 }
 
 /* Step by Step */
@@ -58,10 +69,17 @@
 .ingredients-container {
     width: 40%;
     height: auto;
-    background: rgb(94, 238, 94);
+    background: rgb(163, 250, 163);
     font-size: 25px;
-    padding-left: 30px;
-    border-radius: 25px 25px 25px 0;
+    border-radius: 25px 25px 25px 25px;    
+    box-shadow: 5px 5px 5px 5px lightblue;
+    margin-left: 0.5%;
+}
+.ingredients-container:hover {    
+    background: rgb(113, 199, 228);
+    box-shadow: 5px 5px 5px 5px rgb(193, 243, 193);   
+    transition: 0.7s; 
+    
 }
 .ingredients-container h1:hover {
     text-align: center; 
@@ -72,6 +90,7 @@
 .ingredients-container h1 {
     text-align: center; 
     color: teal;
+    box-shadow: 0 5px 0 0  white;;
     
 }
 .ol-list ol {
@@ -91,23 +110,35 @@
 .recipes-clock i {
     font-weight: bold;
 }
-.wine-pairing {
-    padding-top: 10px;
-    font-size: 18px;
+.winePairing {
+    font-size: 1em;
     color: teal;
+    margin: 1%;    
+}
+.winePairing:hover {
+    font-size: 1.3em;
+    color: white;
+        
 }
 
 /* Instructions */
 
 .instruction-container {
     width: 80%;
-    background: rgb(113, 199, 228);
+    background: rgb(163, 250, 163);    
     height: auto;
     font-size: 20px;
     margin-left: 10%;
     position: relative;
     border-radius: 25px;
     color: teal;
+    box-shadow: 5px 5px 5px 5px lightblue;
+    margin-top: 0.3%;
+}
+.instruction-container:hover {
+    background: rgb(113, 199, 228); 
+    box-shadow: 5px 5px 5px 5px rgb(193, 243, 193);   
+    transition: 0.7s; 
 }
 .instruction-container ol li:first-letter {
     text-transform: capitalize;
