--- a/recipes/src/assets/global.css
+++ b/recipes/src/assets/global.css
@@ -51,7 +51,18 @@ html,body {
     position: relative; 
     margin-left: 1.8%;   
 } 
-
+.created-by {
+    text-align: center;
+    margin-bottom: 1%;
+    font-size: 1.2em;
+    color: rgb(107, 107, 235);
+}
+.created-by a {
+    text-decoration: none;
+    padding-left: 0.3%;
+    color: rgb(85, 85, 238);   
+  
+}
 
 
 
