--- a/recipes/src/assets/SingleRecipe.css
+++ b/recipes/src/assets/SingleRecipe.css
@@ -99,7 +99,7 @@
     font-size: 25px;
     border-radius: 25px 25px 25px 25px;    
     box-shadow: 5px 5px 5px 5px lightblue;
-    margin-left: 0.5%;
+    margin-left: 0.5%;    
 }
 .ingredients-container:hover {    
     background: rgb(113, 199, 228);
@@ -144,13 +144,15 @@
     }
   }
 .ol-list ol {
-    list-style: none;    
-    
+    list-style: none;      
+}
+.ol-list ol li {
+  padding: 2%;     
 }
 .ol-list ol li:hover {
     color: white; 
-    transform: scale(1.6);
-    margin-left: 16%; 
+    font-size: 1.4em;
+    margin-left: 5%; 
     transition: 0.6s;
     
 }
@@ -166,8 +168,9 @@
     margin: 2%;    
 }
 .wine-text:hover {
-    font-size: 1.5em;
-    color: white;        
+    font-size: 1.6em;
+    color: white;    
+    transition: 0.3s;    
 }
 .wine-title {
     color: teal;
@@ -178,6 +181,7 @@
     color: white;
     font-size: 1em;
     margin-left: 2%;
+    transition: 0.5s;
 }
 
 /* Instructions */
@@ -231,17 +235,13 @@
     }
   }
  .ins-list ol li {
-     padding-bottom: 2%;     
+     padding: 1%;     
  }
  .ins-title:hover {
      color: white;
      transform: scale3d(1.1, 1.1, 1.1 );
      transform: rotate3d(1, 0, 1, 5deg);
      transition: 0.8s;
- }
-  .ins-list ol {
-     list-style: none;
-     
  }
  .ins-list ol li:hover {
      color: white;
