--- a/recipes/src/assets/SingleRecipe.css
+++ b/recipes/src/assets/SingleRecipe.css
@@ -90,6 +90,14 @@
     transition: 0.6s;  
     text-shadow: 1px 1px rgb(193, 243, 193);      
 }
+.likes i {
+  font-size: 1.3em;
+  padding-bottom: 2%;
+}
+.likes i:hover {
+  color: white;
+  font-size: 1.5em;
+}
 
 /* Step by Step */
 
