--- a/recipes/src/assets/SingleRecipe.css
+++ b/recipes/src/assets/SingleRecipe.css
@@ -7,16 +7,15 @@
     color: teal;
 }
 .recipes-info {
-    width: 60%;
-    
-    background: rgb(163, 250, 163);
+    width: 60%;    
+    background: #7FFFD4;
     height: auto;
     border-radius: 25px 25px 25px 25px;
-    box-shadow: 5px 5px 5px 5px lightblue;
+    box-shadow: 5px 5px 5px 5px #4CD4F0;
 }
 .recipes-info:hover {
-    background: rgb(113, 199, 228);
-    box-shadow: 5px 5px 5px 5px rgb(193, 243, 193);   
+    background: #4CD4F0;
+    box-shadow: 5px 5px 5px 5px #7FFFD4; 
     transition: 0.7s; 
    
 }
@@ -88,7 +87,7 @@
     color: white;
     transform: rotate3d(1, 0, 1, 5deg);
     transition: 0.6s;  
-    text-shadow: 1px 1px rgb(193, 243, 193);      
+    text-shadow: 1px 1px #7FFFD4;  
 }
 .likes i {
   font-size: 1.3em;
@@ -104,15 +103,15 @@
 .ingredients-container {
     width: 40%;
     height: auto;
-    background: rgb(163, 250, 163);
+    background: #7FFFD4;
     font-size: 25px;
     border-radius: 25px 25px 25px 25px;    
-    box-shadow: 5px 5px 5px 5px lightblue;
+    box-shadow: 5px 5px 5px 5px #4CD4F0;
     margin-left: 0.5%;    
 }
 .ingredients-container:hover {    
-    background: rgb(113, 199, 228);
-    box-shadow: 5px 5px 5px 5px rgb(193, 243, 193);   
+    background: #4CD4F0;
+    box-shadow: 5px 5px 5px 5px #7FFFD4;
     transition: 0.7s; 
     
 }
@@ -121,7 +120,7 @@
     color: white;   
     transform: rotate3d(1, 0, 1, 5deg);
     transition: 0.6s;
-    text-shadow: 2px 2px rgb(193, 243, 193); 
+    text-shadow: 2px 2px #7FFFD4;
 }
 .ingredients-container h1 {
     text-align: center; 
@@ -197,19 +196,19 @@
 
 .instruction-container {
     width: 80%;
-    background: rgb(163, 250, 163);    
+    background: #7FFFD4;    
     height: auto;
     font-size: 20px;
     margin-left: 10%;
     position: relative;
     border-radius: 25px;
     color: teal;
-    box-shadow: 5px 5px 5px 5px lightblue;
+    box-shadow: 5px 5px 5px 5px #4CD4F0;
     margin-top: 0.3%;
 }
 .instruction-container:hover {
-    background: rgb(113, 199, 228); 
-    box-shadow: 5px 5px 5px 5px rgb(193, 243, 193);   
+    background: #4CD4F0;
+    box-shadow: 5px 5px 5px 5px #7FFFD4;
     transition: 0.7s; 
 }
 .instruction-container ol li:first-letter {
